--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="./logo.png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <link rel="shortcut icon" href="./logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css"/>
     <title>Andrew Philippick</title>
   </head>
   <body>
+    <noscript>
+          You need to enable JavaScript to run this app.
+    </noscript>
     <div id="wrapper"></div>
   </body>
 </html>
