--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" href="./logo.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css"/>
+    <link rel="manifest" href="./manifest.json" />
     <title>Andrew Philippick</title>
   </head>
   <body>
